# sigma

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  test_output.txt  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/workflows/: playwright.yml  release.yml  test-and-build.yml
benchmarks/: vitest-bench-baseline.json  vitest-bench-baseline.verbose.txt
docs/: native-video-playback.md
e2e/: app-shell.spec.ts  canvas-media.spec.ts  canvas-navigation.spec.ts  canvas-save.spec.ts  canvas-workflows.spec.ts  helpers.ts  performance.spec.ts  video-scrub.spec.ts
fixtures/: generated-lod-test-1080p.webm
scripts/: build-icons.sh  check-vitest-bench-baseline.mjs  run-pre-push.mjs  run-vitest-benchmarks.mjs
src/: App.css  App.tsx  InfiniteCanvas.audio.test.tsx  InfiniteCanvas.css  InfiniteCanvas.interactions.test.tsx  InfiniteCanvas.media.test.tsx  InfiniteCanvas.test.tsx  InfiniteCanvas.tsx  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/benches/: ipc_latency.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: decode_arbiter.rs  lib.rs  main.rs
src-tauri/src/native_video/: commands.rs  constants.rs  controller.rs  frame_packet.rs  mod.rs  profile.rs  resource_monitor.rs  state.rs  telemetry.rs  tests.rs  types.rs  util.rs  worker.rs
src/bench/: culling.bench.ts  fixtures.ts  ipcLatency.bench.ts  spatialIndex.bench.ts  viewportMath.bench.ts
(+108 files in other folders)
