[package]
name = "sigma"
version = "0.2.0"
authors = ["David Pham <ph0ne@protonmail.com>"]
description = "Scalable media canvas"
homepage = "https://github.com/phooning/sigma"
repository = "https://github.com/phooning/sigma"
edition = "2021"

[profile.release]
lto = true
codgen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync", "time"] }
libc = "0.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
